<resources>
    <string name="app_name">Study</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SignUp</string>
    <string name="exit_toast">Please click BACK again to exit</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="profile">Profile</string>
    <string name="data">Data</string>

</resources>
